crates/swc_ecma_parser/tests/test262-error-references/fail/78e861dca5c2377d.js.stderr
error: Cannot use a reserved word as a shorthand property
 --> $DIR/tests/test262-parser/fail/78e861dca5c2377d.js:1:14
  |
1 | function* y({yield}) {}
  |              ^^^^^

